--- a/style.css
+++ b/style.css
@@ -102,16 +102,19 @@ nav ul li a:hover {
 }
 
 button {
-  color: rgb(255, 255, 255);
-  background: rgb(51, 51, 51);
-  padding: 10px;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
+  border: rgba(0, 0, 0, 0);
+  background: rgba(51, 51, 51, 0);
+  padding: 0.5rem;
   margin: 20px auto;
   font-family: 'itcfont';
 }
 
 button:hover {
-  background: rgb(141, 141, 141);
+  background: rgba(141, 141, 141, 0);
 }
+
 
 .wrapper {
   color: white;
@@ -494,4 +497,21 @@ button:hover {
     height: 100%;
   }
 
+}
+
+.cool-button {
+  display: inline-block;
+  padding: 0.5em 2em;
+  border: 2px solid black;
+  border-radius: 100px;
+  background-image: linear-gradient(to right, rgb(218, 196, 0), rgb(0, 149, 218));
+  color: white;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  margin: 20px;
+}
+
+.cool-button:hover {
+  background-color: blue;
+  cursor: pointer;
 }
