--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-  background-color: #280050;
+  background-image: linear-gradient(to right, rgb(155, 8, 8), rgb(79, 0, 168));
   font-size: 30px;
   height: 100px;
   line-height: 100px;
@@ -30,7 +30,7 @@ h1 {
 .navbar {
   width: 100%;
   height: 65px;
-  background-color: #390072;
+  background-image: linear-gradient(to right, rgb(102, 1, 1), rgb(73, 0, 122));
 }
 
 .toggle-button {
@@ -72,10 +72,12 @@ nav ul li {
 
 nav ul li a {
   display: block;
+  border-radius: 50px;
   color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 25px 15px;
   text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
 }
 
 nav ul li ul {
@@ -83,22 +85,25 @@ nav ul li ul {
   position: absolute;
   nav-up: 1px;
   right: 5px;
-  background-color: #390072;
   padding: 10px;
 }
 
 nav ul li ul li a {
   padding: 10px 20px;
+  border-radius: 25px;
+  background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
+  transition: all 0.2s ease-in-out;
 }
 
 nav ul li:hover ul {
   display: block;
-  background-color: #390072;
 }
 
 nav ul li a:hover {
   color: rgb(0, 255, 255);
-  background-color: #320064;
+  background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
+  transform: scale(1.5);
+  border-radius: 25px;
 }
 
 button {
@@ -112,10 +117,6 @@ button {
   font-family: 'itcfont';
 }
 
-button:hover {
-  background: rgba(141, 141, 141, 0);
-}
-
 
 .wrapper {
   color: white;
@@ -124,6 +125,33 @@ button:hover {
   padding: 6rem 2rem 2rem 2rem;
   background: rgb(0, 0, 0);
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.mcpage {
+  color: white;
+  text-shadow: black;
+  margin: auto;
+  padding: 6rem 2rem 2rem 2rem;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.socials {
+  color: white;
+  text-shadow: black;
+  margin: auto;
+  padding: 6rem 2rem 2rem 2rem;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.videohub {
+  color: white;
+  text-shadow: black;
+  margin: 0%;
+  padding: 6rem 1rem 2rem 1rem;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 85%, rgba(0, 0, 0, 0) 100%);
 }
 
 .wrapper2 {
@@ -187,6 +215,7 @@ button:hover {
 
 .cool-button:hover {
   background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
+  transform: scale(1.1);
   cursor: pointer;
 }
 .social-text {
@@ -271,7 +300,7 @@ button:hover {
     margin: 0 auto;
     padding-top: 10px;
     padding-bottom: 14px;
-    background-color: #280050;
+    background-image: linear-gradient(to right, rgb(155, 8, 8), rgb(79, 0, 168));
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -325,6 +354,8 @@ button:hover {
     background: rgb(0, 0, 0);
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 85%, rgba(0, 0, 0, 0) 100%);
   }
+
+  
 
   .twitter {
     display: flex;
@@ -390,6 +421,34 @@ button:hover {
   .index-text {
     font-size: 1rem;
     text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
+  }
+
+  .mcpage {
+    color: white;
+    text-shadow: black;
+    margin: auto;
+    padding: 10rem 2rem 5rem 2rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  
+  .socials {
+    color: white;
+    text-shadow: black;
+    margin: auto;
+    margin: 0rem 0rem 10rem 0rem;
+    padding: 8rem 2rem 5rem 2rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  
+  .videohub {
+    color: white;
+    text-shadow: black;
+    margin: 0%;
+    padding: 6rem 1rem 2rem 1rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 85%, rgba(0, 0, 0, 0) 100%);
   }
 
 
@@ -584,6 +643,33 @@ button:hover {
   .index-text {
     font-size: 1rem;
     text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
+  }
+
+  .mcpage {
+    color: white;
+    text-shadow: black;
+    margin: 0rem 0rem 10rem 0rem;
+    padding: 9rem 2rem 5rem 2rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  
+  .socials {
+    color: white;
+    text-shadow: black;
+    margin: auto;
+    padding: 8rem 2rem 5rem 2rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  
+  .videohub {
+    color: white;
+    text-shadow: black;
+    margin: 0%;
+    padding: 6rem 1rem 2rem 1rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 85%, rgba(0, 0, 0, 0) 100%);
   }
   
 
