--- a/style.css
+++ b/style.css
@@ -261,6 +261,16 @@ button {
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
   padding: 3rem 3rem 1rem 10rem;
   width: 50%;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .index-p {
@@ -275,6 +285,9 @@ button {
   border-radius: 30px;
   background-color: #5865F2;
   text-align: center;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .stream-vod-title {
