--- a/style.css
+++ b/style.css
@@ -25,12 +25,18 @@ h1 {
   font-size: 30px;
   height: 100px;
   line-height: 100px;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .navbar {
   width: 100%;
   height: 65px;
   background-image: linear-gradient(to right, rgb(102, 1, 1), rgb(73, 0, 122));
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .toggle-button {
@@ -54,7 +60,7 @@ h1 {
 .Overlay {
   position: fixed;
   width: 100%;
-  z-index: 100%;
+  z-index: 1;
 }
 
 .navbar-links {
@@ -123,6 +129,9 @@ button {
   text-shadow: black;
   margin: auto;
   padding: 6rem 2rem 2rem 2rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .mcpage {
@@ -131,10 +140,16 @@ button {
   padding: 6rem 2rem 2rem 2rem;
   background: rgb(0, 0, 0);
   display: block;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .bg-accent {
   background:rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .mc-server-text-1 {
@@ -157,11 +172,17 @@ button {
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
   padding: 1rem 1rem 10rem 1rem;
   width: 70%;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .mc-server-text-2 a {
   color: rgb(236, 252, 99);
   text-decoration: none;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .socials {
@@ -169,6 +190,9 @@ button {
   text-shadow: black;
   margin: auto;
   padding: 6rem 2rem 10rem 2rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .videohub {
@@ -176,6 +200,9 @@ button {
   text-shadow: black;
   margin: 0%;
   padding: 2rem 1rem 2rem 1rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .wrapper2 {
@@ -195,6 +222,9 @@ button {
   padding-bottom: 14px;
   background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .videopagewrapper {
@@ -222,6 +252,9 @@ button {
   margin-top: 5%;
   margin-left: 15%;
   padding: 28.12%;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .videopage iframe {
@@ -230,6 +263,9 @@ button {
   left: 0px;
   width: 80%;
   height: 80%;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .cool-button {
@@ -242,6 +278,9 @@ button {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   margin: 20px;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .cool-button:hover {
@@ -252,12 +291,16 @@ button {
 
 .social-text {
   font-size: 2rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .index-text {
   font-size: 1.6rem;
   line-height: 1.4;
   word-spacing: 0.5rem;
+  z-index: -1;
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
   padding: 3rem 3rem 1rem 10rem;
   width: 50%;
@@ -280,6 +323,7 @@ button {
 
 .discord-widget {
   width: 20%;
+  z-index: -1;
   padding: 20px 20px 20px 20px;
   margin: 1rem 1rem 1rem 1rem;
   border-radius: 30px;
@@ -293,11 +337,17 @@ button {
 .stream-vod-title {
   font-size: 2rem;
   margin-bottom: 1rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 .vod-description {
   font-size: 1rem;
   margin-bottom: 1rem;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
 }
 
 
@@ -382,6 +432,10 @@ button {
     overflow: hidden;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    transform: translateY(50px);
+    animation: fade-in 1s ease-in-out forwards;
+    z-index: 2;
   }
 
   .icons {
