--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h1 {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
+  z-index: 2;
 }
 
 .navbar {
@@ -37,6 +38,7 @@ h1 {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
+  z-index: 2;
 }
 
 .toggle-button {
@@ -67,6 +69,10 @@ h1 {
   margin: 0px 5% 5px 5%;
   list-style: none;
   text-decoration: none;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
+  z-index: 2;
 }
 
 nav ul li {
@@ -110,6 +116,10 @@ nav ul li a:hover {
   background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
   transform: scale(1.5);
   border-radius: 25px;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
+  z-index: 2;
 }
 
 button {
