--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ h1 {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
-  z-index: 2;
 }
 
 .navbar {
@@ -38,7 +37,6 @@ h1 {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
-  z-index: 2;
 }
 
 .toggle-button {
@@ -62,17 +60,12 @@ h1 {
 .Overlay {
   position: fixed;
   width: 100%;
-  z-index: 1;
 }
 
 .navbar-links {
   margin: 0px 5% 5px 5%;
   list-style: none;
   text-decoration: none;
-  opacity: 0;
-  transform: translateY(50px);
-  animation: fade-in 1s ease-in-out forwards;
-  z-index: 2;
 }
 
 nav ul li {
@@ -116,10 +109,7 @@ nav ul li a:hover {
   background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
   transform: scale(1.5);
   border-radius: 25px;
-  opacity: 0;
-  transform: translateY(50px);
-  animation: fade-in 1s ease-in-out forwards;
-  z-index: 2;
+  z-index: 3;
 }
 
 button {
@@ -160,6 +150,12 @@ button {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
+  z-index: -1;
+}
+
+.bg-container {
+  position: relative;
+  z-index: -2;
 }
 
 .mc-server-text-1 {
@@ -310,7 +306,6 @@ button {
   font-size: 1.6rem;
   line-height: 1.4;
   word-spacing: 0.5rem;
-  z-index: -1;
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
   padding: 3rem 3rem 1rem 10rem;
   width: 50%;
@@ -333,7 +328,6 @@ button {
 
 .discord-widget {
   width: 20%;
-  z-index: -1;
   padding: 20px 20px 20px 20px;
   margin: 1rem 1rem 1rem 1rem;
   border-radius: 30px;
@@ -358,6 +352,13 @@ button {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
+}
+
+.link-nest {
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
+  z-index: 2;
 }
 
 
