--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ nav ul li a:hover {
   background-image: linear-gradient(to right, rgb(218, 15, 0), rgb(105, 0, 109));
   transform: scale(1.5);
   border-radius: 25px;
-  z-index: 3;
+  position: relative;
 }
 
 button {
@@ -150,12 +150,8 @@ button {
   opacity: 0;
   transform: translateY(50px);
   animation: fade-in 1s ease-in-out forwards;
-  z-index: 2;
-}
-
-.bg-container {
   position: relative;
-  z-index: 1;
+  z-index: -1;
 }
 
 .mc-server-text-1 {
