--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
-  height: 100%;
+  min-height: 100%;
   color: white;
   text-shadow: black;
   font-family: 'itcfont', Tahoma, Geneva, Verdana, sans-serif;
@@ -139,7 +139,6 @@ button {
 .wrapper {
   color: white;
   text-shadow: black;
-  margin: auto;
   padding: 6rem 2rem 2rem 2rem;
   opacity: 0;
   transform: translateY(50px);
