--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ body::before {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.header {
+  z-index: 3;
+}
+
 h1 {
   background-image: linear-gradient(to right, rgb(155, 8, 8), rgb(79, 0, 168));
   font-size: 30px;
@@ -679,7 +683,6 @@ button {
     width: 100%;
     padding: 0%;
     font-size: 35;
-    z-index: 1;
   }
 
   body {
@@ -776,6 +779,7 @@ button {
   .header {
     position: fixed;
     width: 100%;
+    z-index: 3;
   }
 
   .videopagewrapper {
