--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ button {
   word-spacing: 0.5rem;
   text-align: left;
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
-  padding: 3rem 1rem 3rem 20rem;
+  padding: 3rem 1rem 3rem 15%;
   width: 70%;
   opacity: 0;
   transform: translateY(50px);
