--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@
   padding: 0px;
 }
 
+html::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: rgb(170, 170, 170);
+  border-radius: 100px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: rgb(61, 61, 61);
+  opacity: 0;
+}
+
 @font-face {
   font-family: 'itcfont';
   src: url('itcfont.otf');
