--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
-  min-height: 100%;
   color: white;
   text-shadow: black;
   font-family: 'itcfont', Tahoma, Geneva, Verdana, sans-serif;
@@ -382,3 +381,19 @@ button {
   z-index: 2;
 }
 
+.audio-container {
+  position: relative;
+}
+
+.mute-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+  font-size: 20px;
+  max-height: 90px;
+  max-width: 250px;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fade-in 1s ease-in-out forwards;
+}
