--- a/style-mediaquery.css
+++ b/style-mediaquery.css
@@ -206,7 +206,7 @@
 
     .cool-button {
         display: inline-block;
-        padding: 0.1em 2em;
+        padding: 0.1em 1em;
         border: 2px solid black;
         border-radius: 100px;
         background-image: linear-gradient(to right, rgb(218, 196, 0), rgb(0, 149, 218));
@@ -242,8 +242,6 @@
     }
 
     .socials {
-        color: white;
-        text-shadow: black;
         padding: 8rem 2rem 20rem 2rem;
     }
 
@@ -330,6 +328,60 @@
         font-size: 15px;
         min-height: 60px;
         min-width: 10px;
+      }
+
+      section {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        margin: 3rem 1rem;
+      }
+      
+      .social-card {
+        height: 3rem;
+        width: 3rem;
+        border-radius: 1rem;
+        border: 2px solid #000;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(68.98590367679458deg, rgba(18, 18, 18,1) 4.21875%,rgba(18, 17, 18,1) 4.21875%,rgba(53, 0, 79,1) 39.09722222222223%,rgba(53, 0, 79,1) 89.63541666666666%);
+        grid-column: span 2;
+        box-shadow: 0.7rem 0.7rem 0rem black;
+        gap: 1rem;
+        padding: 1.5rem;
+      }
+      
+      .social-card:hover {
+        transform: scale(1.1);
+        background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47,1) 1.7955729166666665%,rgba(254, 0, 47,1) 1.7955729166666665%,rgba(90, 0, 135,1) 100.70182291666666%);
+      }
+      
+      .social-paragraph {
+        display: none;
+        font-size: 1.5rem;
+      }
+      
+      .social-card.active p {
+        display: block;
+      }
+
+      .social-card.active .social-text{
+        display: none;
+      }
+      
+      .social-card.active {
+        grid-column: 1 / span 4;
+        grid-row: 1;
+        order: 0;
+        height: auto;
+        width: auto;
+        background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47,1) 1.7955729166666665%,rgba(254, 0, 47,1) 1.7955729166666665%,rgba(90, 0, 135,1) 100.70182291666666%);
+      }
+      
+      .social-card.inactive {
+        grid-auto-columns: auto;
       }
 
 }
