--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ button {
 
 section {
   display: grid;
-  grid-template-columns: repeat(6,1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-gap: 3rem;
   margin: 5rem 50rem;
   justify-content: center;
@@ -395,7 +395,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(68.98590367679458deg, rgba(18, 18, 18,1) 4.21875%,rgba(18, 17, 18,1) 4.21875%,rgba(53, 0, 79,1) 39.09722222222223%,rgba(53, 0, 79,1) 89.63541666666666%);
+  background: linear-gradient(68.98590367679458deg, rgba(18, 18, 18, 1) 4.21875%, rgba(18, 17, 18, 1) 4.21875%, rgba(53, 0, 79, 1) 39.09722222222223%, rgba(53, 0, 79, 1) 89.63541666666666%);
   grid-column: span 2;
   box-shadow: 0.7rem 0.7rem 0rem black;
   gap: 1rem;
@@ -404,7 +404,7 @@ section {
 
 .social-card:hover {
   transform: scale(1.1);
-  background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47,1) 1.7955729166666665%,rgba(254, 0, 47,1) 1.7955729166666665%,rgba(90, 0, 135,1) 100.70182291666666%);
+  background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47, 1) 1.7955729166666665%, rgba(254, 0, 47, 1) 1.7955729166666665%, rgba(90, 0, 135, 1) 100.70182291666666%);
 }
 
 .social-paragraph {
@@ -422,7 +422,7 @@ section {
   order: 0;
   height: auto;
   width: auto;
-  background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47,1) 1.7955729166666665%,rgba(254, 0, 47,1) 1.7955729166666665%,rgba(90, 0, 135,1) 100.70182291666666%);
+  background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47, 1) 1.7955729166666665%, rgba(254, 0, 47, 1) 1.7955729166666665%, rgba(90, 0, 135, 1) 100.70182291666666%);
 }
 
 .social-card.inactive {
