--- a/style-mediaquery.css
+++ b/style-mediaquery.css
@@ -82,26 +82,26 @@
         position: fixed;
         bottom: 0%;
         width: 100%;
-        height: 10px;
         margin: 0 auto;
         padding-top: 10px;
         padding-bottom: 14px;
         background-color: rgba(0, 0, 0, 0.7);
         overflow: hidden;
+        z-index: 3;
     }
 
     .mobile_nav {
         list-style: none;
         position: fixed;
         display: flex;
-        bottom: 4%;
-        width: 85%;
+        bottom: 5rem;
         left: 2rem;
+        max-width: 85%;
         border-radius: 15px;
-        height: 70px;
+        max-height: 5rem;
         margin: 0 auto;
-        padding-top: 10px;
-        padding-bottom: 14px;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
         background-image: linear-gradient(to right, rgb(155, 8, 8), rgb(79, 0, 168));
         overflow: hidden;
         justify-content: center;
@@ -118,15 +118,15 @@
         position: relative;
         display: block;
         padding: 0% 0.6rem;
-        width: 50px;
-        height: 50px;
+        min-width: 50px;
+        min-height: 50px;
     }
 
     .mobile_nav ul {
         justify-content: center;
         align-items: center;
         display: flex;
-        width: 350px;
+        min-width: 350px;
     }
 
     .mobile_nav ul li a {
@@ -347,6 +347,18 @@
         grid-auto-columns: auto;
     }
 
+    .footer-socials a {
+        text-decoration: none;
+        list-style: none;
+        color: rgb(0, 183, 255);
+        padding: 0rem 1rem 0rem 0rem;
+      }
+      
+      .footer-socials a:hover {
+        text-decoration: underline;
+        color: red;
+      }
+
 }
 
 /* This is for devices with more than 600px */
@@ -406,33 +418,37 @@
     }
 
     .footer {
-        display: none;
         position: fixed;
         bottom: 0%;
         width: 100%;
-        height: 10px;
         margin: 0 auto;
-        padding-top: 10px;
-        padding-bottom: 14px;
+        padding-top: 0.5rem;
+        padding-bottom: 1.8rem;
         background-color: rgba(0, 0, 0, 0.7);
         overflow: hidden;
+        z-index: 3;
     }
 
     .mobile_nav {
+        list-style: none;
         position: fixed;
         display: flex;
-        bottom: 2%;
-        width: 90%;
-        left: 1.2rem;
+        bottom: 5rem;
+        max-width: 85%;
+        left: 2rem;
         border-radius: 15px;
-        height: 70px;
+        max-height: 5rem;
         margin: 0 auto;
-        padding-top: 10px;
-        padding-bottom: 14px;
-        background-color: #280050;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+        background-image: linear-gradient(to right, rgb(155, 8, 8), rgb(79, 0, 168));
         overflow: hidden;
         justify-content: center;
         align-items: center;
+        opacity: 0;
+        transform: translateY(50px);
+        animation: fade-in 1s ease-in-out forwards;
+        z-index: 2;
     }
 
     .icons {
