--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ button {
   position: fixed;
   bottom: 0%;
   width: 100%;
-  max-height: 20px;
+  max-height: 2.5rem;
   margin: 0 auto;
   padding-top: 10px;
   padding-bottom: 14px;
@@ -428,4 +428,16 @@ section {
 .social-card.inactive {
   grid-auto-columns: auto;
   opacity: 0.7;
+}
+
+.footer-socials a {
+  text-decoration: none;
+  list-style: none;
+  color: rgb(0, 183, 255);
+  padding: 0rem 1rem 0rem 0rem;
+}
+
+.footer-socials a:hover {
+  text-decoration: underline;
+  color: red;
 }
