--- a/style-mediaquery.css
+++ b/style-mediaquery.css
@@ -293,7 +293,7 @@
     .discord-widget {
         width: 80%;
         padding: 20px 20px 20px 20px;
-        margin: 1rem 1rem 10rem 1rem;
+        margin: 1rem 1rem 1rem 1rem;
         border-radius: 30px;
         background-color: #5865F2;
         text-align: center;
@@ -357,6 +357,22 @@
       .footer-socials a:hover {
         text-decoration: underline;
         color: red;
+      }
+
+      .kofi {
+        position: relative;
+        right: 1%;
+        top: 1.5rem;
+        height: 40px;
+        margin: 0;
+        padding: 0 0 12rem 0;
+        opacity: 0;
+        transform: translateY(50px);
+        animation: fade-in 1s ease-in-out forwards;
+      }
+      
+      .kofi img {
+        height: 40px;
       }
 
 }
@@ -601,6 +617,33 @@
         background-color: #5865F2;
         text-align: center;
     }
+
+    .discord-widget {
+        width: 80%;
+        padding: 20px 20px 20px 20px;
+        margin: 1rem 1rem 1rem 1rem;
+        border-radius: 30px;
+        background-color: #5865F2;
+        text-align: center;
+    }
+
+
+    .kofi {
+        position: relative;
+        right: 1%;
+        top: 1.5rem;
+        height: 40px;
+        margin: 0;
+        padding: 0 0 12rem 0;
+        opacity: 0;
+        transform: translateY(50px);
+        animation: fade-in 1s ease-in-out forwards;
+      }
+      
+      .kofi img {
+        height: 40px;
+      }
+
 
 
 }
