--- a/style-mediaquery.css
+++ b/style-mediaquery.css
@@ -1,34 +1,19 @@
-/* This media query is to move the Discord widget to the bottom on Displays less than 1000px */
-@media only screen and (max-width: 1000px) {
-
-    .index-text {
-        font-size: 1.6rem;
-        line-height: 1.4;
-        word-spacing: 0.5rem;
-        display: block;
-        text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
-        padding: 1rem 1rem 1rem 1rem;
-        width: 90%;
-    }
-
-    .index-p {
-        display: block;
-    }
+/* This media query is to move the Discord widget to the bottom on Displays less than 1200px */
+@media only screen and (max-width: 1200px) {
 
     .discord-widget {
-        width: 80%;
-        padding: 20px 20px 20px 20px;
-        margin: 1rem 1rem 10rem 1rem;
+        width: 90%;
+        padding: 20px;
+        margin: 1rem 1rem 2rem 1rem;
         border-radius: 30px;
         background-color: #5865F2;
         text-align: center;
     }
-}
 
-@media only screen and (max-width: 720px) {
-    .mute-button {
-        position: absolute;
-        font-size: 17px;
+    .homepage {
+        flex-direction: column;
+        padding-top: 7rem;
+        padding-bottom: 5rem;
     }
 }
 
@@ -62,20 +47,6 @@
         color: white;
         text-shadow: black;
         font-family: 'itcfont', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    .videopagewrapper img {
-        max-width: 152px;
-        max-height: 90px;
-        border-radius: 25px;
-        border-style: solid;
-        border-color: rgb(65, 0, 168);
-        margin: 0.2rem;
-        transition: all 0.2s ease-in-out;
-    }
-
-    .videopagewrapper img:hover {
-        transform: scale(1.2);
     }
 
     .footer {
@@ -147,46 +118,6 @@
 
     }
 
-    .videopagewrapper {
-        margin: auto;
-        padding: 3rem 0rem 7.5rem 0rem;
-        overflow: hidden;
-    }
-
-    .wrapper2 {
-        color: white;
-        text-shadow: black;
-        margin: auto;
-        padding: 9rem 1rem 4rem 1rem;
-    }
-
-    .videopage {
-        position: relative;
-        overflow: hidden;
-        margin: 0%;
-        padding: 0%;
-        width: 370px;
-        height: 210px;
-    }
-
-    .videopage iframe {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-    }
-
-    .wrapper {
-        color: white;
-        text-shadow: black;
-        margin: auto;
-        padding: 10rem 2rem 2rem 2rem;
-    }
-
-    .wrapper iframe {
-        height: 400px;
-        width: 320;
-    }
-
     .cool-button {
         display: inline-block;
         padding: 0.1em 1em;
@@ -218,22 +149,10 @@
         text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
     }
 
-    .index-text {
-        font-size: 1rem;
-        text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
-    }
-
     .mcpage {
         color: white;
         text-shadow: black;
         padding: 10rem 0rem;
-    }
-
-    .videohub {
-        color: white;
-        text-shadow: black;
-        margin: 0%;
-        padding: 8rem 1rem 2rem 1rem;
     }
 
     .mc-server-text-1 {
@@ -245,35 +164,6 @@
         margin-bottom: 5rem;
         width: 95%;
         display: inline-block
-    }
-
-    .mc-server-text-2 {
-        font-size: 1.3rem;
-        line-height: 1.5;
-        text-align: left;
-        display: inline-block;
-        word-spacing: 0.5rem;
-        text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
-        padding: 1rem 1rem 5rem 1rem;
-        width: 95%;
-    }
-
-    .mc-server-text-2 a {
-        color: rgb(236, 252, 99);
-        text-decoration: none;
-    }
-
-    .mc-p-title {
-        font-size: 3rem;
-        line-height: 1.4;
-        word-spacing: 0.5rem;
-        text-align: left;
-        text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
-        padding: 1rem 1rem 1rem 1rem;
-        width: 70%;
-        opacity: 0;
-        transform: translateY(50px);
-        animation: fade-in 1s ease-in-out forwards;
     }
 
     .index-text {
@@ -292,8 +182,8 @@
 
     .discord-widget {
         width: 80%;
-        padding: 20px 20px 20px 20px;
-        margin: 1rem 1rem 1rem 1rem;
+        padding: 20px;
+        margin: 1rem;
         border-radius: 30px;
         background-color: #5865F2;
         text-align: center;
@@ -303,48 +193,6 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         margin: 3rem 1rem;
-    }
-
-    .social-card {
-        height: 3rem;
-        width: 3rem;
-        border-radius: 1rem;
-        border: 2px solid #000;
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: linear-gradient(68.98590367679458deg, rgba(18, 18, 18, 1) 4.21875%, rgba(18, 17, 18, 1) 4.21875%, rgba(53, 0, 79, 1) 39.09722222222223%, rgba(53, 0, 79, 1) 89.63541666666666%);
-        grid-column: span 2;
-        box-shadow: 0.7rem 0.7rem 0rem black;
-        gap: 1rem;
-    }
-
-    .social-card:hover {
-        transform: scale(1.1);
-        background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47, 1) 1.7955729166666665%, rgba(254, 0, 47, 1) 1.7955729166666665%, rgba(90, 0, 135, 1) 100.70182291666666%);
-    }
-
-    .social-paragraph {
-        display: none;
-    }
-
-    .social-card.active p {
-        display: block;
-    }
-
-    .social-card.active {
-        grid-column: 1 / span 4;
-        grid-row: 1;
-        order: 0;
-        height: auto;
-        width: auto;
-        background: linear-gradient(113.8363919473685deg, rgba(255, 0, 47, 1) 1.7955729166666665%, rgba(254, 0, 47, 1) 1.7955729166666665%, rgba(90, 0, 135, 1) 100.70182291666666%);
-    }
-
-    .social-card.inactive {
-        grid-auto-columns: auto;
     }
 
     .footer-socials a {
@@ -361,7 +209,6 @@
 
       .kofi {
         position: relative;
-        right: 1%;
         top: 1.5rem;
         height: 40px;
         margin: 0;
@@ -373,6 +220,25 @@
       
       .kofi img {
         height: 40px;
+      }
+
+      .homepage {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
+        padding: 1rem;
+        max-width: 90%;
+        margin: 0 auto;
+        padding-bottom: 15rem;
+      }
+
+      .homepage p1 {
+        flex: 1;
+        margin-top: 5rem;
+        margin-right: 1rem;
+        font-size: 1.3rem;
+        line-height: 1.5rem;
       }
 
 }
@@ -642,6 +508,17 @@
       
       .kofi img {
         height: 40px;
+      }
+
+      .homepage {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
+        padding: 1rem;
+        max-width: 90%;
+        margin: 0 auto;
+        padding-bottom: 12rem;
       }
 
 
